docs/api/qiskit/2.3/qiskit.circuit.library.PolynomialPauliRotationsGate.mdx
---
title: PolynomialPauliRotationsGate (v2.3)
description: API reference for qiskit.circuit.library.PolynomialPauliRotationsGate in qiskit v2.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.PolynomialPauliRotationsGate
---

# PolynomialPauliRotationsGate

<Class id="qiskit.circuit.library.PolynomialPauliRotationsGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/library/arithmetic/polynomial_pauli_rotations.py#L266-L388" signature="qiskit.circuit.library.PolynomialPauliRotationsGate(num_state_qubits, coeffs=None, basis='Y', label=None)" modifiers="class">
  Bases: [`Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  A gate implementing polynomial Pauli rotations.

  For a polynomial $p(x)$, a basis state $|i\rangle$ and a target qubit $|0\rangle$ this operator acts as:

$$
|i\rangle |0\rangle \mapsto \cos\left(\frac{p(i)}{2}\right) |i\rangle |0\rangle
+ \sin\left(\frac{p(i)}{2}\right) |i\rangle |1\rangle
$$

  Let n be the number of qubits representing the state, d the degree of p(x) and q\_i the qubits, where q\_0 is the least significant qubit. Then for

$$
x = \sum_{i=0}^{n-1} 2^i q_i,
$$

  we can write

$$
p(x) = \sum_{j=0}^{j=d} c_j x^j
$$

  where $c$ are the input coefficients, `coeffs`.

  Prepare an approximation to a state with amplitudes specified by a polynomial.

  **Parameters**

  *   **num\_state\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int)) – The number of qubits representing the state.
  *   **coeffs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list)*\[*[*float*](https://docs.python.org/3/library/functions.html#float)*] | None*) – The coefficients of the polynomial. `coeffs[i]` is the coefficient of the i-th power of x. Defaults to linear: \[0, 1].
  *   **basis** ([*str*](https://docs.python.org/3/library/stdtypes.html#str)) – The type of Pauli rotation (‘X’, ‘Y’, ‘Z’).
  *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str) *| None*) – A label for the gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotationsGate.base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioral perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.PolynomialPauliRotationsGate.base_class "qiskit.circuit.library.PolynomialPauliRotationsGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrized gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrized gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotationsGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotationsGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotationsGate.label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotationsGate.mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotationsGate.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotationsGate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotationsGate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.PolynomialPauliRotationsGate.params">
    The parameters of this `Instruction`. Ideally these will be gate angles.
  </Attribute>

  ## Methods

  ### add\_decomposition

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.add_decomposition" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L320-L325" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.broadcast_arguments" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L199-L256" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list)) – List of quantum bit arguments.
    *   **cargs** ([*list*](https://docs.python.org/3/library/stdtypes.html#list)) – List of classical bit arguments.

    **Returns**

    A tuple with single arguments.

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If the input is not valid. For example, the number of arguments does not match the gate expectation.

    **Return type**

    [*Iterable*](https://docs.python.org/3/library/typing.html#typing.Iterable)\[[tuple](https://docs.python.org/3/library/stdtypes.html#tuple)\[[list](https://docs.python.org/3/library/stdtypes.html#list), [list](https://docs.python.org/3/library/stdtypes.html#list)]]
  </Function>

  ### control

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.control" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L105-L156" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=None)">
    Return the controlled version of itself.

    The controlled gate is implemented as [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") when `annotated` is `False`, and as [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") when `annotated` is `True`.

    <Admonition title="Deprecated since version 2.3" type="danger">
      `qiskit.circuit.gate.Gate.control()`’s argument `annotated` is deprecated as of Qiskit 2.3. It will be removed in Qiskit 3.0. The method Gate.control() no longer accepts annotated=None. The new default is annotated=True, which represents the controlled gate as an AnnotatedOperation (unless a dedicated controlled-gate class already exists). You can explicitly set annotated=False to preserve the previous behavior. However, using annotated=True is recommended, as it defers construction of the controlled circuit to transpiler, and furthermore enables additional controlled-gate optimizations (typically leading to higher-quality circuits).
    </Admonition>

    **Parameters**

    *   **num\_ctrl\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int)) – Number of controls to add. Defauls to `1`.
    *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str) *| None*) – Optional gate label. Defaults to `None`. Ignored if the controlled gate is implemented as an annotated operation.
    *   **ctrl\_state** ([*int*](https://docs.python.org/3/library/functions.html#int)  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str) *| None*) – The control state of the gate, specified either as an integer or a bitstring (e.g. `"110"`). If `None`, defaults to the all-ones state `2**num_ctrl_qubits - 1`.
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool) *| None*) – Indicates whether the controlled gate should be implemented as a controlled gate or as an annotated operation. If `None`, treated as `False`.

    **Returns**

    A controlled version of this gate.

    **Raises**

    [**QiskitError**](exceptions#qiskit.exceptions.QiskitError "qiskit.exceptions.QiskitError") – invalid `ctrl_state`.
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.copy" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L430-L445" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str)) – name to be given to the copied circuit, if `None` then the name stays the same.

    **Returns**

    a copy of the current instruction, with the name updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L373-L428" signature="inverse(annotated=False)">
    Invert this instruction.

    If annotated is False, the inverse instruction is implemented as a fresh instruction with the recursively inverted definition.

    If annotated is True, the inverse instruction is implemented as [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation"), and corresponds to the given instruction annotated with the “inverse modifier”.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.) In particular, they can choose how to handle the argument `annotated` which may include ignoring it and always returning a concrete gate class if the inverse is defined as a standard gate.

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool)) – if set to True the output inverse gate will be returned as [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation").

    **Returns**

    The inverse operation.

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.is_parameterized" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L285-L290" signature="is_parameterized()">
    Return whether the `Instruction` contains [compile-time parameters](circuit#circuit-compile-time-parameters).
  </Function>

  ### power

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.power" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L63-L94" signature="power(exponent, annotated=False)">
    Raise this gate to the power of `exponent`.

    Implemented either as a unitary gate (ref. [`UnitaryGate`](qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate")) or as an annotated operation (ref. [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation")). In the case of several standard gates, such as [`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate"), when the power of a gate can be expressed in terms of another standard gate that is returned directly.

    **Parameters**

    *   **exponent** ([*float*](https://docs.python.org/3/library/functions.html#float)) – the power to raise the gate to
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool)) – indicates whether the power gate can be implemented as an annotated operation. In the case of several standard gates, such as [`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate"), this argument is ignored when the power of a gate can be expressed in terms of another standard gate.

    **Returns**

    An operation implementing `gate^exponent`

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If gate is not unitary
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.repeat" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L493-L523" signature="repeat(n)">
    Creates an instruction with `self` repeated $n$ times.

    **Parameters**

    **n** ([*int*](https://docs.python.org/3/library/functions.html#int)) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.reverse_ops" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L347-L371" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### soft\_compare

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.soft_compare" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L216-L256" signature="soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool)
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.to_matrix" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L49-L61" signature="to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Returns**

    if the Gate subclass has a matrix definition.

    **Return type**

    np.ndarray

    **Raises**

    [**CircuitError**](circuit#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.
  </Function>

  ### to\_mutable

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.to_mutable" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/instruction.py#L145-L153" signature="to_mutable()">
    Return a mutable copy of this gate.

    This method will return a new mutable copy of this gate instance. If a singleton instance is being used this will be a new unique instance that can be mutated. If the instance is already mutable it will be a deepcopy of that instance.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.PolynomialPauliRotationsGate.validate_parameter" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/gate.py#L258-L272" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

